Removed Notification Page
- Dashboard now loads directly to Profile page instead of Notification
page.
- Updated button icons on dashboard

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -26,7 +26,7 @@
     
 
     <!-- Custom Fonts -->
-    <link href="font-awesome-4.1.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="font-awesome-4.2.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -281,12 +281,19 @@
                             </div>
                             <!-- /input-group -->
                         </li>
+                        <!--
                         <li>                        
                             <a id="dashboard-btn" class="active"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
-                        </li>                      
+                        </li>      -->                
                         <li>
-                            <a id="profile-btn"><i class="fa fa-user fa-fw"></i> Profile</a>
-                        </li>                                                                        
+                            <a id="profile-btn" class="active"><i class="fa fa-user fa-fw"></i> Profile</a>
+                        </li>   
+                        <li>
+                            <a id="fitnessplan-btn" ><i class="fa fa-angellist fa-fw"></i> My Fitness Plan</a>
+                        </li>   
+                         <li>
+                            <a id="progressrecord-btn" ><i class="fa fa-line-chart fa-fw"></i> Progress Record</a>
+                        </li>                                                                    
                        
                     </ul>
                 </div>
