Added finish button navigation. Fixed session check bug.
- Added finish button navigation.
- Fixed session check bug.

--- a/index.html
+++ b/index.html
@@ -248,7 +248,9 @@
 													<div class="alert alert-success" role="alert"> <p id="DiPlan"> Hello </p> </div>
 												</div>  
 										 </div>
-										 <button class="btn btn-primary btn-block" href="dashboard/index.html">Finish</button> 
+									<form class="form-signin" action="javascript: successregister();" role="form">
+										 <button class="btn btn-primary btn-block" type="submit">Finish</button> 
+									</form>
 									</div>
 								</div>
 								
