fixed exercise/diet plan display on dashboard
- Fixed exercise/diet plan display on dashboard
- Removed exercise plan display on registration process.

--- a/index.html
+++ b/index.html
@@ -239,14 +239,9 @@
 									<div class="panel-body" id="PanelBody">
 										 <p id="target"> </p>
 										 <div class="row">
-												<div class="col-md-4"> 
-													<label class="control-label" for="ExPlan">Exercise Plan</label>
-													<div class="alert alert-danger" role="alert"> <p id="ExPlan"> Hello </p> </div>
-												</div> 
-												<div class="col-md-4">
-													<label class="control-label" for="DiPlan">Diet Plan</label>
-													<div class="alert alert-success" role="alert"> <p id="DiPlan"> Hello </p> </div>
-												</div>  
+											 <div class="alert alert-success" role="alert">
+										        <strong>Great!</strong> We have successfully generated your fitness and excercise plans. You can check it out on your dashboard.
+										     </div>												 
 										 </div>
 									<form class="form-signin" action="javascript: successregister();" role="form">
 										 <button class="btn btn-primary btn-block" type="submit">Finish</button> 
