--- a/dashboard/pages/fitnessplan.html
+++ b/dashboard/pages/fitnessplan.html
@@ -11,7 +11,7 @@
             </div>
             <div class="panel-body">
               <div class="row">
-                    <p id="ExPlan"></p>
+                    <div id="ExPlan"></div>
               </div>
             </div>
           </div>
