--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -321,6 +321,8 @@
 
     <!-- Metis Menu Plugin JavaScript -->
     <script src="js/plugins/metisMenu/metisMenu.min.js"></script>
+	
+	<script src="js/jquery.validate.js"></script>
 
     
 
